# IBSL-HR-Report

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ibsl_hr_custom_report/: hooks.py  modules.txt
ibsl_hr_custom_report/ibsl_hr_custom_report/report/monthly_attendance_sheet_with_in_and_out_time/: monthly_attendance_sheet_with_in_and_out_time.js  monthly_attendance_sheet_with_in_and_out_time.json  monthly_attendance_sheet_with_in_and_out_time.py
ibsl_hr_custom_report/ibsl_hr_custom_report/report/monthly_attendance_sheet_with_leave_detail/: monthly_attendance_sheet_with_leave_detail.js  monthly_attendance_sheet_with_leave_detail.json  monthly_attendance_sheet_with_leave_detail.py
ibsl_hr_custom_report/ibsl_hr_custom_report/report/monthly_attendance_sheet_with_leave_type/: monthly_attendance_sheet_with_leave_type.js  monthly_attendance_sheet_with_leave_type.json  monthly_attendance_sheet_with_leave_type.py
